* used enums for eventType * generate_security events is a static func now * event parameter enum names
